<resources>
    <string name="app_name">MoneyExpend</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tambah_entry">TAMBAH ENTRY</string>
    <string name="logo">logo</string>
    <string name="sidebar">SIDEBAR</string>
    <string name="today_s_expend">TODAY\'S EXPEND</string>
    <string name="income">Income</string>
    <string name="Expend">Expend</string>
    <string name="budget">Budget</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_email">enter your email</string>
    <string name="title_activity_sidebar">sidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <String name="sidebar_open">Open Sidebar</String>
    <string name="sidebar_close">Close Sidebar</string>
</resources>